--- a/src/view/TechMainView.fxml
+++ b/src/view/TechMainView.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
@@ -38,16 +39,16 @@
                               <ListView fx:id="currentJobsListView" editable="true" prefHeight="333.0" prefWidth="215.0" />
                            </children>
                         </VBox>
-                        <VBox alignment="TOP_RIGHT" prefHeight="351.0" prefWidth="215.0">
-                           <children>
-                              <Label alignment="TOP_CENTER" prefHeight="17.0" prefWidth="218.0" text="User Statistics" />
-                              <ListView fx:id="userStatisticsListView" editable="true" prefHeight="333.0" prefWidth="215.0" />
-                           </children>
-                        </VBox>
                         <VBox prefHeight="350.0" prefWidth="170.0">
                            <children>
-                              <Label alignment="TOP_CENTER" prefHeight="17.0" prefWidth="149.0" text="Memos" />
-                              <ListView fx:id="memosListView" editable="true" prefHeight="333.0" prefWidth="170.0" />
+                              <Label alignment="TOP_CENTER" prefHeight="17.0" prefWidth="149.0" text="Details:" />
+                              <TextArea fx:id="detailsTextArea" prefHeight="330.0" prefWidth="170.0" />
+                           </children>
+                        </VBox>
+                        <VBox prefHeight="6.0" prefWidth="215.0">
+                           <children>
+                              <Label text="Extras:" />
+                              <TextArea fx:id="extrasTextArea" prefHeight="330.0" prefWidth="215.0" />
                            </children>
                         </VBox>
                      </children>
