--- a/src/view/PopUpAddCustomer.fxml
+++ b/src/view/PopUpAddCustomer.fxml
@@ -1,8 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import java.lang.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
-</BorderPane>
 
+<BorderPane prefHeight="300.0" prefWidth="500.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+   <center>
+      <VBox alignment="TOP_CENTER">
+         <children>
+            <HBox alignment="CENTER" prefHeight="70.0" prefWidth="500.0" spacing="20.0">
+               <children>
+                  <TextField fx:id="companyTextField" promptText="Company" />
+                  <TextField fx:id="nameTextField" promptText="Name" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="70.0" prefWidth="200.0" spacing="20.0" BorderPane.alignment="CENTER">
+               <children>
+                  <TextField fx:id="phoneTextField" promptText="Phone: ###-###-####" />
+                  <TextField fx:id="emailTextField" promptText="Email" />
+               </children>
+            </HBox>
+            <Button mnemonicParsing="false" text="Add Customer" />
+         </children>
+         <BorderPane.margin>
+            <Insets bottom="20.0" top="20.0" />
+         </BorderPane.margin>
+      </VBox>
+   </center>
+   <top>
+      <Label alignment="CENTER" prefHeight="63.0" prefWidth="283.0" text="Enter the customer's information to register them" textAlignment="CENTER" wrapText="true" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets top="30.0" />
+         </BorderPane.margin>
+      </Label>
+   </top>
+</BorderPane>
