--- a/src/view/LoginView.fxml
+++ b/src/view/LoginView.fxml
@@ -18,5 +18,7 @@
       <Button fx:id="enterButton" layoutX="268.0" layoutY="308.0" mnemonicParsing="false" onAction="#enterAction" text="Enter" />
       <TextField fx:id="usernameTextField" layoutX="225.0" layoutY="185.0" />
       <TextField fx:id="passwordTextField" layoutX="225.0" layoutY="233.0" />
+      <Button fx:id="createButton" layoutX="475.0" layoutY="355.0" mnemonicParsing="false" onAction="#createAction" prefHeight="31.0" prefWidth="70.0" text="Create" />
+      <TextField fx:id="createTextField" layoutX="545.0" layoutY="355.0" prefHeight="31.0" prefWidth="41.0" />
    </children>
 </Pane>
