--- a/src/view/TechMainView.fxml
+++ b/src/view/TechMainView.fxml
@@ -17,9 +17,9 @@
    <children>
       <AnchorPane>
          <children>
-            <FlowPane alignment="TOP_CENTER" columnHalignment="CENTER" prefHeight="650.0" prefWidth="600.0">
+            <FlowPane alignment="TOP_CENTER" columnHalignment="CENTER" prefHeight="678.0" prefWidth="739.0">
                <children>
-                  <HBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="598.0" spacing="10.0">
+                  <HBox alignment="TOP_CENTER" prefHeight="130.0" prefWidth="739.0" spacing="10.0">
                      <children>
                         <Pane prefHeight="100.0" prefWidth="90.0">
                            <children>
@@ -36,24 +36,26 @@
                         </Label>
                      </children>
                   </HBox>
-                  <HBox prefHeight="351.0" prefWidth="600.0">
+                  <HBox prefHeight="351.0" prefWidth="735.0">
                      <children>
                         <VBox alignment="TOP_RIGHT" prefHeight="351.0" prefWidth="215.0">
                            <children>
                               <Label alignment="TOP_CENTER" prefHeight="17.0" prefWidth="248.0" text="Current Jobs" />
-                              <ListView fx:id="currentJobsListView" editable="true" prefHeight="333.0" prefWidth="215.0" />
+                              <ListView fx:id="currentJobsListView" editable="true" onMouseClicked="#handleMouseClick" prefHeight="151.0" prefWidth="210.0" />
+                              <Label alignment="TOP_CENTER" prefHeight="21.0" prefWidth="219.0" text="Completed Jobs" />
+                              <ListView fx:id="completedJobsListView" prefHeight="163.0" prefWidth="210.0" />
                            </children>
                         </VBox>
-                        <VBox prefHeight="350.0" prefWidth="170.0">
+                        <VBox prefHeight="351.0" prefWidth="296.0">
                            <children>
-                              <Label alignment="TOP_CENTER" prefHeight="17.0" prefWidth="149.0" text="Details:" />
-                              <TextArea fx:id="detailsTextArea" prefHeight="330.0" prefWidth="170.0" />
+                              <Label alignment="TOP_CENTER" prefHeight="21.0" prefWidth="364.0" text="Details:" />
+                              <TextArea fx:id="detailsTextArea" prefHeight="330.0" prefWidth="206.0" />
                            </children>
                         </VBox>
-                        <VBox prefHeight="6.0" prefWidth="215.0">
+                        <VBox prefHeight="351.0" prefWidth="240.0">
                            <children>
-                              <Label text="Extras:" />
-                              <TextArea fx:id="extrasTextArea" prefHeight="330.0" prefWidth="215.0" />
+                              <Label alignment="TOP_CENTER" prefHeight="21.0" prefWidth="310.0" text="Extras:" />
+                              <TextArea fx:id="extrasTextArea" prefHeight="330.0" prefWidth="150.0" />
                            </children>
                         </VBox>
                      </children>
