--- a/src/view/PopUpAddCustomer.fxml
+++ b/src/view/PopUpAddCustomer.fxml
@@ -9,7 +9,7 @@
 
 <BorderPane prefHeight="300.0" prefWidth="500.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
    <center>
-      <VBox alignment="TOP_CENTER">
+      <VBox alignment="TOP_CENTER" spacing="10.0">
          <children>
             <HBox alignment="CENTER" prefHeight="70.0" prefWidth="500.0" spacing="20.0">
                <children>
@@ -23,7 +23,8 @@
                   <TextField fx:id="emailTextField" promptText="Email" />
                </children>
             </HBox>
-            <Button mnemonicParsing="false" text="Add Customer" />
+            <Button mnemonicParsing="false" onAction="#handle" text="Add Customer" />
+            <Label fx:id="warningLabel" alignment="CENTER" prefHeight="47.0" prefWidth="335.0" />
          </children>
          <BorderPane.margin>
             <Insets bottom="20.0" top="20.0" />
