--- a/src/view/LoginView.fxml
+++ b/src/view/LoginView.fxml
@@ -1,24 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label fx:id="loginLabel" layoutX="245.0" layoutY="89.0" text="Login">
-         <font>
-            <Font size="41.0" />
-         </font>
-      </Label>
-      <Label fx:id="usernameLabel" layoutX="139.0" layoutY="190.0" text="Username:" />
-      <Label fx:id="passwordLabel" layoutX="139.0" layoutY="238.0" text="Password:" />
-      <Button fx:id="enterButton" layoutX="268.0" layoutY="308.0" mnemonicParsing="false" onAction="#enterAction" text="Enter" />
-      <TextField fx:id="usernameTextField" layoutX="225.0" layoutY="185.0" />
-      <TextField fx:id="passwordTextField" layoutX="225.0" layoutY="233.0" />
-      <Button fx:id="createButton" layoutX="475.0" layoutY="355.0" mnemonicParsing="false" onAction="#createAction" prefHeight="31.0" prefWidth="70.0" text="Create" />
-      <TextField fx:id="createTextField" layoutX="545.0" layoutY="355.0" prefHeight="31.0" prefWidth="41.0" />
+      <Button fx:id="adminButton" alignment="CENTER" contentDisplay="CENTER" layoutX="83.0" layoutY="84.0" mnemonicParsing="false" onAction="#switchAdminView" prefHeight="232.0" prefWidth="191.0" text="Admin" textAlignment="CENTER" />
+      <Button fx:id="techButton" contentDisplay="CENTER" layoutX="340.0" layoutY="84.0" mnemonicParsing="false" onAction="#techSelect" prefHeight="232.0" prefWidth="191.0" text="Technician" />
    </children>
 </Pane>
