--- a/src/view/LoginView.fxml
+++ b/src/view/LoginView.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../../css/maincss.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Button fx:id="adminButton" alignment="CENTER" contentDisplay="CENTER" layoutX="83.0" layoutY="84.0" mnemonicParsing="false" onAction="#switchAdminView" prefHeight="232.0" prefWidth="191.0" text="Admin" textAlignment="CENTER" />
       <Button fx:id="techButton" contentDisplay="CENTER" layoutX="340.0" layoutY="84.0" mnemonicParsing="false" onAction="#techSelect" prefHeight="232.0" prefWidth="191.0" text="Technician" />
