--- a/src/stylesheets/mainCSS.css
+++ b/src/stylesheets/mainCSS.css
@@ -1,10 +1,11 @@
 *{
+	-fx-base: #424242;
 	-fx-background-color: #424242;
 }
 
 .button {
 	-fx-font-size: 16pt;
-	-fx-shape: "";
+	-fx-shape: "M 300 200 L 500 200 L 500 450 L 300 450 L 300 200 ";
 	-fx-background-color: #039BE5;
 	-fx-text-fill: white;
 	-fx-effect: dropshadow(three-pass-box, black, 10, 0, 0, 0);
