--- a/src/view/TechMainView.fxml
+++ b/src/view/TechMainView.fxml
@@ -43,7 +43,7 @@
                               <Label alignment="TOP_CENTER" prefHeight="17.0" prefWidth="248.0" text="Current Jobs" />
                               <ListView fx:id="currentJobsListView" editable="true" onMouseClicked="#handleMouseClick" prefHeight="151.0" prefWidth="210.0" />
                               <Label alignment="TOP_CENTER" prefHeight="21.0" prefWidth="219.0" text="Completed Jobs" />
-                              <ListView fx:id="completedJobsListView" prefHeight="163.0" prefWidth="210.0" />
+                              <ListView fx:id="completedJobsListView" onMouseClicked="#handleMouseClick" prefHeight="163.0" prefWidth="210.0" />
                            </children>
                         </VBox>
                         <VBox prefHeight="351.0" prefWidth="296.0">
