--- a/src/view/TechMainView.fxml
+++ b/src/view/TechMainView.fxml
@@ -18,73 +18,70 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane stylesheets="@../stylesheets/defaultCSS.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+
+<AnchorPane prefHeight="678.0" prefWidth="739.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane>
+      <FlowPane alignment="CENTER" columnHalignment="CENTER" prefHeight="678.0" prefWidth="739.0">
          <children>
-            <FlowPane alignment="TOP_CENTER" columnHalignment="CENTER" prefHeight="678.0" prefWidth="739.0">
+            <HBox alignment="TOP_CENTER" prefHeight="130.0" prefWidth="739.0" spacing="10.0">
                <children>
-                  <HBox alignment="TOP_CENTER" prefHeight="130.0" prefWidth="739.0" spacing="10.0">
+                  <Pane prefHeight="100.0" prefWidth="90.0">
                      <children>
-                        <Pane prefHeight="100.0" prefWidth="90.0">
-                           <children>
-                              <Button fx:id="logoutButton" layoutX="-84.0" layoutY="35.0" mnemonicParsing="false" onAction="#logoutAction" prefHeight="31.0" prefWidth="149.0" text="Logout" />
-                           </children>
-                        </Pane>
-                        <Label text="Techinican Main Page " textFill="#e13535">
-                           <font>
-                              <Font size="32.0" />
-                           </font>
-                           <HBox.margin>
-                              <Insets top="30.0" />
-                           </HBox.margin>
-                        </Label>
+                        <Button fx:id="logoutButton" layoutX="-84.0" layoutY="35.0" mnemonicParsing="false" onAction="#logoutAction" prefHeight="31.0" prefWidth="149.0" text="Logout" />
                      </children>
-                  </HBox>
-                  <HBox prefHeight="351.0" prefWidth="735.0">
-                     <children>
-                        <VBox alignment="TOP_RIGHT" prefHeight="351.0" prefWidth="215.0">
-                           <children>
-                              <Label alignment="TOP_CENTER" prefHeight="17.0" prefWidth="248.0" text="Current Jobs" />
-                              <ListView fx:id="currentJobsListView" editable="true" onMouseClicked="#handleMouseClick" prefHeight="151.0" prefWidth="210.0" />
-                              <Label alignment="TOP_CENTER" prefHeight="21.0" prefWidth="219.0" text="Completed Jobs" />
-                              <ListView fx:id="completedJobsListView" onMouseClicked="#handleMouseClick" prefHeight="163.0" prefWidth="210.0" />
-                           </children>
-                        </VBox>
-                        <VBox prefHeight="351.0" prefWidth="296.0">
-                           <children>
-                              <Label alignment="TOP_CENTER" prefHeight="21.0" prefWidth="364.0" text="Details:" />
-                              <TextArea fx:id="detailsTextArea" prefHeight="330.0" prefWidth="206.0" />
-                           </children>
-                        </VBox>
-                        <VBox prefHeight="351.0" prefWidth="240.0">
-                           <children>
-                              <Label alignment="TOP_CENTER" prefHeight="21.0" prefWidth="310.0" text="Extras:" />
-                              <TextArea fx:id="extrasTextArea" prefHeight="330.0" prefWidth="150.0" />
-                           </children>
-                        </VBox>
-                     </children>
-                  </HBox>
-                  <Label alignment="CENTER" prefHeight="34.0" prefWidth="160.0" text="Available Jobs">
+                  </Pane>
+                  <Label text="Techinican Main Page " textFill="#e13535">
                      <font>
-                        <Font size="16.0" />
+                        <Font size="32.0" />
                      </font>
+                     <HBox.margin>
+                        <Insets top="30.0" />
+                     </HBox.margin>
                   </Label>
-                  <HBox prefHeight="163.0" prefWidth="585.0" spacing="10.0">
-                     <children>
-                        <VBox alignment="CENTER">
-                           <children>
-                              <DatePicker fx:id="startDatePicker" promptText="Start" showWeekNumbers="true" />
-                              <DatePicker fx:id="endDatePicker" promptText="End" />
-                              <Button fx:id="updateButton" mnemonicParsing="false" text="Update" />
-                           </children>
-                        </VBox>
-                        <ListView fx:id="availableJobsListView" onMouseClicked="#handleMouseClick" prefHeight="163.0" prefWidth="389.0" />
-                     </children>
-                  </HBox>
                </children>
-            </FlowPane>
+            </HBox>
+            <HBox prefHeight="351.0" prefWidth="735.0">
+               <children>
+                  <VBox alignment="TOP_RIGHT" prefHeight="351.0" prefWidth="215.0">
+                     <children>
+                        <Label alignment="TOP_CENTER" prefHeight="17.0" prefWidth="248.0" text="Current Jobs" />
+                        <ListView fx:id="currentJobsListView" editable="true" onMouseClicked="#handleMouseClick" prefHeight="151.0" prefWidth="210.0" />
+                        <Label alignment="TOP_CENTER" prefHeight="21.0" prefWidth="219.0" text="Completed Jobs" />
+                        <ListView fx:id="completedJobsListView" onMouseClicked="#handleMouseClick" prefHeight="163.0" prefWidth="210.0" />
+                     </children>
+                  </VBox>
+                  <VBox prefHeight="351.0" prefWidth="296.0">
+                     <children>
+                        <Label alignment="TOP_CENTER" prefHeight="21.0" prefWidth="364.0" text="Details:" />
+                        <TextArea fx:id="detailsTextArea" prefHeight="330.0" prefWidth="206.0" />
+                     </children>
+                  </VBox>
+                  <VBox prefHeight="351.0" prefWidth="240.0">
+                     <children>
+                        <Label alignment="TOP_CENTER" prefHeight="21.0" prefWidth="310.0" text="Extras:" />
+                        <TextArea fx:id="extrasTextArea" prefHeight="330.0" prefWidth="150.0" />
+                     </children>
+                  </VBox>
+               </children>
+            </HBox>
+            <Label alignment="CENTER" prefHeight="34.0" prefWidth="160.0" text="Available Jobs">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <HBox prefHeight="163.0" prefWidth="585.0" spacing="10.0">
+               <children>
+                  <VBox alignment="CENTER">
+                     <children>
+                        <DatePicker fx:id="startDatePicker" promptText="Start" showWeekNumbers="true" />
+                        <DatePicker fx:id="endDatePicker" promptText="End" />
+                        <Button fx:id="updateButton" mnemonicParsing="false" text="Update" />
+                     </children>
+                  </VBox>
+                  <ListView fx:id="availableJobsListView" onMouseClicked="#handleMouseClick" prefHeight="163.0" prefWidth="389.0" />
+               </children>
+            </HBox>
          </children>
-      </AnchorPane>
+      </FlowPane>
    </children>
-</Pane>
+</AnchorPane>
