--- a/src/view/TechMainView.fxml
+++ b/src/view/TechMainView.fxml
@@ -14,11 +14,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="700.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="881.0" prefWidth="1040.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <center>
       <VBox>
          <children>
-            <HBox alignment="TOP_CENTER" prefHeight="130.0" prefWidth="739.0" spacing="10.0">
+            <HBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="847.0" spacing="10.0">
                <children>
                   <Pane prefHeight="100.0" prefWidth="90.0">
                      <children>
@@ -37,10 +37,10 @@
             </HBox>
             <HBox alignment="CENTER" prefHeight="351.0" prefWidth="735.0" BorderPane.alignment="CENTER">
                <children>
-                  <VBox alignment="TOP_RIGHT" prefHeight="351.0" prefWidth="215.0">
+                  <VBox alignment="TOP_RIGHT" prefHeight="351.0" prefWidth="354.0">
                      <children>
-                        <Label alignment="TOP_CENTER" prefHeight="17.0" prefWidth="248.0" text="Current Jobs" />
-                        <ListView fx:id="currentJobsListView" editable="true" onMouseClicked="#handleMouseClick" prefHeight="151.0" prefWidth="210.0">
+                        <Label alignment="TOP_CENTER" prefHeight="21.0" prefWidth="325.0" text="Current Jobs" />
+                        <ListView fx:id="currentJobsListView" editable="true" onMouseClicked="#handleMouseClick" prefHeight="149.0" prefWidth="297.0">
                            <contextMenu>
                               <ContextMenu>
                                 <items>
@@ -49,8 +49,8 @@
                                 </items>
                               </ContextMenu>
                            </contextMenu></ListView>
-                        <Label alignment="TOP_CENTER" prefHeight="21.0" prefWidth="219.0" text="Completed Jobs" />
-                        <ListView fx:id="completedJobsListView" onMouseClicked="#handleMouseClick3" prefHeight="163.0" prefWidth="210.0">
+                        <Label alignment="TOP_CENTER" prefHeight="21.0" prefWidth="334.0" text="Completed Jobs" />
+                        <ListView fx:id="completedJobsListView" onMouseClicked="#handleMouseClick3" prefHeight="168.0" prefWidth="263.0">
                            <contextMenu>
                               <ContextMenu>
                                 <items>
@@ -60,13 +60,13 @@
                            </contextMenu></ListView>
                      </children>
                   </VBox>
-                  <VBox prefHeight="351.0" prefWidth="296.0">
+                  <VBox prefHeight="351.0" prefWidth="634.0">
                      <children>
-                        <Label alignment="TOP_CENTER" prefHeight="21.0" prefWidth="364.0" text="Details:" />
+                        <Label alignment="TOP_CENTER" prefHeight="21.0" prefWidth="583.0" text="Details:" />
                         <TextArea fx:id="detailsTextArea" prefHeight="330.0" prefWidth="206.0" />
                      </children>
                   </VBox>
-                  <VBox prefHeight="351.0" prefWidth="240.0">
+                  <VBox prefHeight="351.0" prefWidth="326.0">
                      <children>
                         <Label alignment="TOP_CENTER" prefHeight="21.0" prefWidth="310.0" text="Extras:" />
                         <TextArea fx:id="extrasTextArea" prefHeight="330.0" prefWidth="150.0" />
@@ -74,14 +74,14 @@
                   </VBox>
                </children>
             </HBox>
-            <VBox alignment="CENTER">
+            <VBox alignment="CENTER" prefHeight="252.0" prefWidth="1040.0">
                <children>
                   <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="34.0" prefWidth="160.0" text="Available Jobs">
                      <font>
                         <Font size="16.0" />
                      </font>
                   </Label>
-                  <HBox alignment="CENTER" prefHeight="163.0" prefWidth="585.0" spacing="10.0" BorderPane.alignment="CENTER">
+                  <HBox alignment="CENTER" prefHeight="218.0" prefWidth="1040.0" spacing="10.0" BorderPane.alignment="CENTER">
                      <children>
                         <VBox alignment="CENTER">
                            <children>
@@ -90,7 +90,7 @@
                               <Button fx:id="updateButton" mnemonicParsing="false" text="Update" />
                            </children>
                         </VBox>
-                        <ListView fx:id="availableJobsListView" onMouseClicked="#handleMouseClick2" prefHeight="163.0" prefWidth="389.0">
+                        <ListView fx:id="availableJobsListView" onMouseClicked="#handleMouseClick2" prefHeight="218.0" prefWidth="389.0">
                            <contextMenu>
                               <ContextMenu>
                                 <items>
