--- a/src/view/TechMainView.fxml
+++ b/src/view/TechMainView.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ContextMenu?>
@@ -14,7 +19,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="881.0" prefWidth="1040.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="881.0" prefWidth="1040.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <center>
       <VBox>
          <children>
@@ -85,9 +90,7 @@
                      <children>
                         <VBox alignment="CENTER">
                            <children>
-                              <DatePicker fx:id="startDatePicker" promptText="Start" showWeekNumbers="true" />
-                              <DatePicker fx:id="endDatePicker" promptText="End" />
-                              <Button fx:id="updateButton" mnemonicParsing="false" text="Update" />
+                              <Button fx:id="newJob" mnemonicParsing="false" onAction="#handleNewJob" text="New Job" />
                            </children>
                         </VBox>
                         <ListView fx:id="availableJobsListView" onMouseClicked="#handleMouseClick2" prefHeight="218.0" prefWidth="389.0">
